--- a/anima.cabal
+++ b/anima.cabal
@@ -23,3 +23,8 @@ executable anima
   build-depends:       base >=4.6 && <4.7
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+Test-Suite Tests
+  type:          exitcode-stdio-1.0
+  main-is:       Tests.hs
+  build-depends: base
