--- a/anima.cabal
+++ b/anima.cabal
@@ -20,11 +20,11 @@ executable anima
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.6 && <4.7, parsec >=3.1.5 && < 3.2
   -- hs-source-dirs:      
   default-language:    Haskell2010
 
 Test-Suite Tests
   type:          exitcode-stdio-1.0
   main-is:       Tests.hs
-  build-depends: base >=4.6 && <4.7
+  build-depends: base >=4.6 && <4.7, parsec >=3.1.5 && < 3.2
