--- a/anima.cabal
+++ b/anima.cabal
@@ -20,7 +20,8 @@ executable anima
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7, parsec >=3.1.5 && <3.2
+  build-depends:       base >=4.6 && <4.7, parsec >=3.1.5 && <3.2,
+    ansi-terminal >=0.6.1.1 && <0.7
   -- hs-source-dirs:      
   default-language:    Haskell2010
 
