--- a/anima.cabal
+++ b/anima.cabal
@@ -20,7 +20,7 @@ executable anima
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7, parsec >=3.1.5 && <3.2,
+  build-depends:       base, parsec >=3.1.5 && <3.2,
     ansi-terminal >=0.6.1.1 && <0.7
   -- hs-source-dirs:      
   default-language:    Haskell2010
@@ -29,6 +29,6 @@ Test-Suite Tests
   type:           exitcode-stdio-1.0
   hs-source-dirs: Test, .
   main-is:        Test/Main.hs
-  build-depends:  base >=4.6 && <4.7, parsec >=3.1.5 && <3.2,
+  build-depends:  base, parsec >=3.1.5 && <3.2,
      test-framework >=0.8.0.3 && <0.9, test-framework-hunit >=0.3.0.1 && <0.4,
      HUnit >=1.2.5.2 && <1.3
