--- a/anima.cabal
+++ b/anima.cabal
@@ -21,7 +21,7 @@ executable anima
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base, parsec >=3.1.5 && <3.2,
-    ansi-terminal >=0.6.1.1 && <0.7
+    ansi-terminal >=0.6.1.1 && <0.7, haskeline >=0.7.1.3 && <0.8
   -- hs-source-dirs:      
   default-language:    Haskell2010
 
